tests/suite/fail/regression/fuzz/fuzz_unclosed_paren.ny
fn main() { print(1 } //~ ERROR
